@@ -31,6 +31,8 @@ from utils import bin_contains
 
 from gettext import gettext as _
 
+
+
 class PlayGround(gobject.GObject):
     """
     Holds all the applications pipelines.
@@ -497,3 +499,4 @@ class PlayGround(gobject.GObject):
             gst.TIME_ARGS(pos),
             gst.TIME_ARGS(target)))
         self.seekInCurrent(target)
+
