@@ -1,3 +1,6 @@
+2008-06-20  Sarath Lakshman  <sarathlakshman@slynux.org>
+	* pitivi/: ui/webcam_managerdialog.py
+	Attempt to rewrite webcam_managerdialog using PlayGround and SmartCaptureBin (Problem: cannot sync video to the drawing widget)
 
 2008-06-18  Sarath Lakshman  <sarathlakshman@slynux.org>
 	* pitivi/: ui/webcam_managerdialog.py, bin.py
